--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,185 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  font-family: 'DejaVu Serif';
+  --ranger-primary: #8ea53a;
+  --custom-dark: rgba(37,39,37,0.8);
+  --custom-dark-opaque: rgb(37,39,37);
+  --bg-dark: rgba(28,30,27,0.9);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+hr.custom {
+  border: 1px solid white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  background-color: var(--bg-dark);
+  border-top: 4px solid var(--ranger-primary);
+}
+
+.card {
+  background-color: var(--bg-dark);
+}
+
+.trait-card > .card-header {
+  background: #000;
+}
+
+.trait-card {
+  border-radius: 0;
+  border: 1px solid black;
+  margin: 0 5px 0 5px;
+  width: 0;
+}
+
+.trait-card-2 {
+  background: transparent;
+  border: 0px transparent;
+  margin-top: 25px;
+  margin-bottom: 2em;
+}
+.trait-card-2 > .card-header {
+  background: transparent;
+  align-items: center;
+  width: 100%;
+  border: 0;
+  padding: 0;
+  position: absolute;
+  top: -21px;
+  z-index: 5;
+  display: flex;
+  flex-direction: row;
+}
+.trait-card-2 > .card-header > .filler {
+  border-top: 1px solid rgba(200, 200, 200, 0.5);
+  flex-grow: 1;
+}
+.trait-card-2 > .card-header > span {
+  margin-right: 1em;
+}
+.trait-card-2 > .card-body {
+  margin-left: 25px;
+  padding-top: 1.5em;
+  padding-bottom: 0;
+  border-right: 1px solid rgba(200, 200, 200, 0.5);
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+.trait-card-2 > .card-body:after,
+.trait-card-2 > .card-body:before {
+position: absolute;
+content: '';
+z-index: 0;
+}
+.trait-card-2 > .card-body:before {
+width: 80%;
+right: 0px;
+top: 0px;
+border: 1px solid rgba(200, 200, 200, 0.5);
+border-width: 0px 1px 0px 0px;
+}
+.trait-card-2 > .card-body:after {
+height: calc(100% - (0.5em + 21px));
+width: 100%;
+bottom: 0px;
+left: 0px;
+border: 1px solid rgba(200, 200, 200, 0.5);
+border-width: 0px 0px 1px 1px;
+}
+
+.druid-page {
+  background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapercave.com%2Fwp%2FvU3RMgV.jpg&f=1&nofb=1");
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
+
+span[data-armory-size="20"] {
+  display: inline-block;
+  transform: translate(0,-2px);
+}
+
+img {
+  transform: translate(0,-1px);
+}
+
+.vertical-text {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.flip {
+  transform: rotate(180deg);
+}
+
+.clockwise {
+  transform: rotate(90deg) translate(0, -4px);
+}
+
+.gw2a--10x8O {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 140px;
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gw2a--t1hk1 {
+  position: absolute;
+  background-position: bottom left;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.4;
+  background-position-x: -118px;
+}
+
+.fake-button {
+  cursor: pointer;
+}
+
+nav.nav-pills.custom-nav a.nav-link {
+  color: white;
+  border-bottom: 1px solid #dee2e6;
+  border-radius: 0;
+}
+
+nav.nav-pills.custom-nav a.nav-link.active {
+  color: var(--ranger-primary);
+  text-decoration: underline;
+  background-color: var(--custom-dark);
+  border: 1px solid #dee2e6;
+  border-bottom: 1px transparent;
+}
+
+.custom-tab-content {
+  background-color: var(--custom-dark);
+  border: 1px solid #dee2e6;
+  border-top: 0px solid;
+  padding: 2em;
+}
+
+.title-card {
+  border-radius: 0;
+  border: 2px solid white;
+  background-color: black;
+}
+
+.section-title {
+  margin-top: 3em;
+  margin-bottom: 1em;
+  border-top: 2px solid var(--ranger-primary);
+  border-bottom: 2px solid var(--ranger-primary);
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.subsection-title {
+  padding: 0.5em;
+  border-left: 1px solid var(--ranger-primary);
+  background-color: var(--custom-dark);
+  margin-left: 1em;
 }
