--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   font-family: 'DejaVu Serif';
   --ranger-primary: #8ea53a;
+  --dh-primary: #47b8e0;
   --custom-dark: rgba(37,39,37,0.8);
   --custom-dark-opaque: rgb(37,39,37);
   --bg-dark: rgba(28,30,27,0.9);
@@ -139,6 +140,17 @@ nav.custom-nav a.active {
   background-color: var(--custom-dark);
   border: 1px solid #dee2e6;
   border-bottom: 1px transparent;
+}
+
+nav.custom-nav.dragonhunter a.active {
+  color: var(--dh-primary);
+}
+
+.custom-tab-content {
+  background-color: var(--custom-dark);
+  border: 1px solid #dee2e6;
+  border-top: 0px solid;
+  padding: 2em;
 }
 
 .custom-tab-content {
