--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,9 @@
 }
 
 .druid-page {
-  background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapercave.com%2Fwp%2FvU3RMgV.jpg&f=1&nofb=1");
+  background-image: url("./assets/backgrounds/druid.jpg");
   background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
 }
