finished weapons section and added boss cards

--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ nav.custom-nav.warrior a.active {
   color: #6c757d;
 }
 
-.trait-card, .trait-card-2 {
+.trait-card, .trait-card-2, .boss-card {
   background: transparent;
   border: 0px transparent;
   margin-top: 25px;
@@ -224,14 +224,31 @@ nav.custom-nav.warrior a.active {
   display: flex;
   flex-direction: row;
 }
-.trait-card > .trait-name > .filler {
+.boss-card > .boss-name {
+  background: transparent;
+  align-items: center;
+  width: 100%;
+  border: 0;
+  padding: 0;
+  position: absolute;
+  top: -20px;
+  z-index: 5;
+  display: flex;
+  flex-direction: row;
+  margin-right: 1em,
+}
+.trait-card > .trait-name > .filler,
+.boss-card > .boss-name > .filler {
   border-top: 1px solid rgba(200, 200, 200, 0.5);
   flex-grow: 1;
 }
-.trait-card > .trait-name > span {
+.trait-card > .trait-name > span, .boss-name-details {
   margin-right: 1em;
 }
-.trait-card > .trait-description {
+.boss-name-details {
+  margin-left: 5px;
+}
+.trait-card > .trait-description, .boss-card > .boss-description {
   margin-left: 25px;
   padding: 1.5em 1.25rem 0 1.25rem;
   border-right: 1px solid rgba(200, 200, 200, 0.5);
@@ -240,24 +257,29 @@ nav.custom-nav.warrior a.active {
   overflow: hidden;
   z-index: 999;
 }
-.trait-card > .trait-description > * {
+.trait-card > .trait-description > *, .boss-card > .boss-description > * {
   position: relative;
   z-index: 999;
 }
 .trait-card > .trait-description:after,
-.trait-card > .trait-description:before {
+.trait-card > .trait-description:before,
+.boss-card > .boss-description:after,
+.boss-card > .boss-description:before
+ {
   position: absolute;
   content: '';
   z-index: 0;
 }
-.trait-card > .trait-description:before {
+.trait-card > .trait-description:before
+.boss-card > .boss-description:before {
   width: 80%;
   right: 0px;
   top: 0px;
   border: 1px solid rgba(200, 200, 200, 0.5);
   border-width: 0px 1px 0px 0px;
 }
-.trait-card > .trait-description:after {
+.trait-card > .trait-description:after,
+.boss-card > .boss-description:after {
   height: calc(100% - (0.5em + 21px));
   width: 100%;
   bottom: 0px;
