--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,11 @@
 .navbar {
   display: flex;
   align-items: center;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.7);
   color: white;
   height: 65px;
+  position: absolute;
+  width: 100%;
 }
 .navbar ul {
   list-style: none;
@@ -40,6 +42,7 @@
   background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
+  padding-top: 7rem !important;
 }
 .warrior-page {
   background-image: url("./assets/backgrounds/warrior.jpg");
@@ -47,6 +50,7 @@
   background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
+  padding-top: 7rem !important;
 }
 
 span[data-armory-size="20"] {
