--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   height: 75px;
   position: absolute;
   width: 100%;
+  padding: 0;
 }
 .navbar ul {
   list-style: none;
@@ -45,6 +46,7 @@
 .nav-container {
   width: 100%;
   margin: 0 auto;
+  position: relative;
 }
 .nav-row, .menu-items {
   display: flex;
@@ -65,6 +67,34 @@
 }
 .menu-items {
   justify-content: flex-end;
+}
+.mobile-nav {
+  position: absolute;
+  top: 65px;
+  right: 0%;
+  width: 100%;
+  z-index: 1;
+  background-color:rgba(27,29,27,1);
+}
+.mobile-menu-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0 20px 0;
+}
+.mobile-menu-items li {
+   width: 100%;
+   text-align: center;
+}
+.mobile-menu-items a {
+  padding: 15px 0; 
+  width: 100%;
+  display: block;
+}
+.mobile-menu-item a:hover {
+  color: rgba(27,29,27,1) !important;
+  background: white;
 }
 .druid-page {
   background-image: url("./assets/backgrounds/druid.jpg");
