--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
   --bg-dark: rgba(28,30,27,0.9);
   color: white;
 }
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: var(--custom-dark-opaque);
+}
+::-webkit-scrollbar-thumb {
+  background: #666;
+}
 .druid-page {
   background-image: url("./assets/backgrounds/druid.jpg");
   background-repeat: no-repeat;
