--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
-  font-family: 'DejaVu Serif';
+  font-family: 'Noto Serif';
   --ranger-primary: #8ea53a;
   --dh-primary: #69CCE7;
   --war-primary: #CF8D21;
