--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,12 @@ img {
 .ranger .gw2a--M9jBV a:hover, .ranger-trait-intro a:hover {
   text-decoration-color: var(--ranger-primary);
 }
+.commander .gw2a--M9jBV :first-child, .commander-trait-intro :first-child{
+  color: var(--commander-primary);
+}
+.commander .gw2a--M9jBV a:hover, .commander-trait-intro a:hover {
+  text-decoration-color: var(--commander-primary);
+}
 .gw2a--t1hk1 {
   position: absolute;
   background-position: bottom left;
@@ -113,6 +119,13 @@ img {
 .dhlink:hover {
   color: var(--dh-primary);
   text-decoration-color: var(--dh-primary);
+}
+.commlink {
+  color: var(--comm-primary);
+}
+.commlink:hover {
+  color: var(--comm-primary);
+  text-decoration-color: var(--comm-primary);
 }
 /* Container (Taken from Bootstrap) */
 
@@ -188,11 +201,8 @@ nav.custom-nav.commander a.active {
   color: white !important;
   font-family: 'Montserrat';
 }
-.comm-to-remember span {
-  color: white !important;
-}
-.comm-to-remember a {
-  text-decoration: none !important;
+.comm-summary > .gear-card > .gear-name > span {
+  font-weight: bold
 }
 .comm-buffs a {
   text-decoration: none !important;
@@ -701,4 +711,175 @@ nav.custom-nav.warrior a.active {
   border-style: solid;
   border-width: 0 120px 186px 120px;
   border-color: transparent transparent var(--custom-dark-opaque) transparent;
+}
+/*Squad templates*/
+.firebrigade-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "sub1-1 sub1-2 sub1-3 sub1-4 sub1-5" "sub2-1 sub2-2 sub2-3 sub2-4 sub2-5";
+  max-width: 300px;
+  gap: 5px 10px;
+}
+.sub1-1 { 
+  grid-area: sub1-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub1-2 { 
+  grid-area: sub1-2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub1-3 { 
+  grid-area: sub1-3; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub1-4 { 
+  grid-area: sub1-4; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub1-5 { 
+  grid-area: sub1-5; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub2-1 { 
+  grid-area: sub2-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub2-2 { 
+  grid-area: sub2-2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub2-3 { 
+  grid-area: sub2-3; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub2-4 { 
+  grid-area: sub2-4; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sub2-5 { 
+  grid-area: sub2-5; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.boonthief-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "btsub1-1 . . ." "btsub2-1 btsub2-2 btsub2-3 btsub2-4" "btsub3-1 btsub3-2 btsub3-3 ." "btsub4-1 . . ." "btsub5-1 . . .";
+  max-width: 300px;
+  gap: 5px 10px;
+}
+
+.btsub1-1 { 
+  grid-area: btsub1-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub2-1 { 
+  grid-area: btsub2-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub2-2 { 
+  grid-area: btsub2-2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub2-3 { 
+  grid-area: btsub2-3; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub2-4 { 
+  grid-area: btsub2-4; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub3-1 { 
+  grid-area: btsub3-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub3-2 { 
+  grid-area: btsub3-2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub3-3 { 
+  grid-area: btsub3-3; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub4-1 { 
+  grid-area: btsub4-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btsub5-1 { 
+  grid-area: btsub5-1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
 }
