--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,21 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: "Noto Serif";
 }
+@media (max-width:666px) {
+  h3.commander {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width:440px) {
+  h3.commander {
+    font-size: 1rem;
+  }
+}
+@media (max-width:375px) {
+  h3.commander {
+    font-size: 0.8rem;
+  }
+}
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
@@ -453,6 +468,10 @@ nav.custom-nav.warrior a.active {
 }
 .section-title > h3 {
   margin: 0;
+}
+.section-title.dragonhunter {
+  border-top: 2px solid var(--dh-primary);
+  border-bottom: 2px solid var(--dh-primary);
 }
 .section-title.ranger {
   border-top: 2px solid var(--ranger-primary);
